crates/ars-components/src/layout/snapshots/ars_components__layout__frame__tests__frame_root_default.snap
---
source: crates/ars-components/src/layout/frame.rs
expression: "snapshot_attrs(&Api::new(Props::new()).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "frame",
            ),
        ),
    ],
    styles: [],
}
